--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     </nav>
     <main>
       <div class="container">
-        <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
+        <div ng-include="'views/main.html'" ng-controller="getRequest"></div>
       </div>
     </main>
 
