--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,9 @@
     </nav>
     <main>
       <div class="container">
-        <div ng-include="'views/main.html'" ng-controller="getRequest"></div>
+        <div ng-include="'views/main.html'" ng-controller="getRequest">
+
+        </div>
       </div>
     </main>
 
@@ -52,11 +54,9 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- endbower -->
-    <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <!-- endbuild -->
+
 </body>
 </html>
