--- a/app/index.html
+++ b/app/index.html
@@ -30,11 +30,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
         <div ng-include="'views/main.html'" ng-controller="getRequest">
 
         </div>
-      </div>
     </main>
 
 
@@ -52,7 +50,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <!--<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>-->
     <!-- endbower -->
 
         <script src="scripts/app.js"></script>
