--- a/app/index.html
+++ b/app/index.html
@@ -56,5 +56,10 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
 
+  <script type="text/javascript">
+    $(document).ready(function() {
+      Materialize.updateTextFields();
+    });  </script>
+
 </body>
 </html>
