--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
 
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
 
     <!--<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>-->
@@ -60,15 +60,6 @@
 
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-
-  <script type="text/javascript">
-    $(document).ready(function() {
-      Materialize.updateTextFields();
-
-    });
-
-
-  </script>
 
 </body>
 </html>
