--- a/app/index.html
+++ b/app/index.html
@@ -5,16 +5,12 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
 
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/main.css">
+    <script src="scripts/controllers/postform.js"></script>
     <!-- endbuild -->
   </head>
   <body ng-app="venturesityApp">
@@ -22,13 +18,13 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-
     <header style="background-image: linear-gradient(160deg, #02ccba 0, #4aabc2 100%);">
       <nav style="background-color: rgba(0,0,0,0.4);opacity:0.4;">
         <div class="nav-wrapper">
           <a href="#" class="brand-logo center thin">VENTURESITY</a>
-
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <!--<li></li>-->
+          </ul>
         </div>
       </nav>
     </header>
@@ -39,15 +35,6 @@
         </div>
     </main>
 
-
-
-    <footer class="page-footer" style="padding-top: 0;background-image: linear-gradient(160deg, #02ccba 0, #4aabc2 100%);">
-      <div class="footer-copyright" style="background-color: rgba(0,0,0,0.4);opacity:0.4;">
-        <div class="container center">
-          From <span class="glyphicon glyphicon-heart"></span> by Grim
-        </div>
-      </div>
-    </footer>
 
 
 
